Fixed h1/header overflow

--- a/style.css
+++ b/style.css
@@ -1,19 +1,13 @@
 body{
     background-color: lightyellow;
 }
-header {
-    background-color: lightblue;
-    padding: 10px;
+h1 {
     text-align: center;
-    width: 100%;
-    margin: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-header h1 {
-    margin: 0;
     font-size: 60px;
     padding: 20px;
+    margin: 20px; background-color: lightblue;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .page-content {
     display: flex;
@@ -22,6 +16,8 @@ header h1 {
     padding: 20px;
     margin: 20px;
     background-color: bisque;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 nav > ul {
     display: flex;
